# minihtml

./: Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/parse/: attr.rs  element.rs  id_class.rs  mod.rs  name.rs
src/: hc.rs  lib.rs  primitives.rs
tests/: basic.rs
